--- a/frontend/web/src/pages/home/styles.css
+++ b/frontend/web/src/pages/home/styles.css
@@ -58,6 +58,7 @@
 
 .buttons-container a img {
   width: 4rem;
+  margin-right: 1.0rem;
 }
 
 .buttons-container a.study {
@@ -76,7 +77,7 @@
   background-color: var(--color-secundary-dark);
 }
 
-.footer span {
+.stats {
   font-size: 1.4rem;
 
   display: flex;
@@ -84,6 +85,53 @@
   align-items: center;
 }
 
-.footer img {
+.stats img {
   margin-left: 0.8rem;
+}
+
+@media (min-width: 1100px) {
+  #home-content {
+    max-width: 1100px;
+
+    display: grid;
+    grid-template-rows: 350px 1fr;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-areas:
+      "logo image image"
+      "buttons buttons stats";
+  }
+}
+
+.logo {
+  grid-area: logo;
+  text-align: left;
+  align-self: center;
+  margin: 0;
+}
+.logo img {
+  height: 100%;
+}
+
+.logo h2 {
+  text-align: initial;
+  font-size: 3.6rem;
+}
+
+.home-image {
+  grid-area: image;
+  justify-self: end;
+}
+
+.buttons-container {
+  grid-area: buttons;
+  justify-content: flex-start;
+}
+
+.buttons-container a {
+  font-size: 2.4rem;
+}
+
+.stats {
+  grid-area: stats;
+  justify-self: end;
 }
