--- a/frontend/web/src/pages/educators/index/styles.css
+++ b/frontend/web/src/pages/educators/index/styles.css
@@ -3,44 +3,63 @@
   height: 100vh;
 }
 
-.page-header {
-  background-color: var(--color-primary);
-
-  display: flex;
-  flex-direction: column;
+#educators-search {
+  margin-top: 3.2rem;
 }
 
-.page-header .top-bar-container {
+#educators-search label {
   color: var(--color-text-in-primary);
-  width: 90%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1.6rem 0;
 }
 
-.page-header .top-bar-container a {
-  height: 3.2rem;
-  transition: opacity 0.2s;
+#educators-search label {
+  font-size: 1.4rem;
 }
 
-.page-header .top-bar-container a:hover {
-  opacity: 0.6;
-}
-
-.page-header .top-bar-container > img {
-  height: 1.6rem;
-}
-
-.page-header .header-content {
-  width: 90%;
-  margin: 3.2rem auto;
+#educators-search .educators-search {
   position: relative;
 }
 
-.page-header .header-content strong {
-  font: 700 3.6rem Archivo;
-  line-height: 4.2rem;
-  color: var(--color-text-in-primary);
+#educators-search .educators-search + .educators-search {
+  margin-top: 1.4rem;
+}
+
+#educators-search .educators-search select {
+  width: 100%;
+  height: 5.6rem;
+  margin-top: 0.8rem;
+  border-radius: 0.8rem;
+  background: var(--color-input-background);
+  border: 1px solid var(--color-line-in-white);
+  outline: 0;
+  padding: 0 1.6rem;
+  font: 1.6rem Archivo;
+}
+
+#educators-search .educators-search:focus-within::after {
+  width: calc(100% - 3.2rem);
+  height: 2px;
+  content: "";
+  background: var(--color-primary-light);
+  position: absolute;
+  left: 1.6rem;
+  right: 1.6rem;
+  bottom: 0;
+}
+
+@media (min-width: 700px) {
+  #educators-index {
+    max-width: 100%;
+  }
+
+  #educators-search {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 16px;
+    position: absolute;
+    bottom: -28px;
+  }
+
+  #educators-search .educators-search + .educators-search {
+    margin-top: 0;
+  }
 }
