--- a/frontend/web/src/pages/educators/index/styles.css
+++ b/frontend/web/src/pages/educators/index/styles.css
@@ -51,86 +51,9 @@
   width: 90%;
 }
 
-.educator {
-  background: var(--color-box-base);
-  border: 1px solid var(--color-line-in-white);
-  border-radius: 0.8rem;
-  margin-top: 2.4rem;
-  overflow: hidden;
-}
-
-.educator header {
-  padding: 3.2rem 2rem;
-  display: flex;
-  align-items: center;
-}
-
-.educator header img {
-  width: 8rem;
-  height: 8rem;
-  border-radius: 50%;
-}
-
-.educator header div {
-  margin-left: 2.4rem;
-}
-
-.educator header div strong {
-  font: 700 2.4rem Archivo;
-  display: block;
-  color: var(--color-text-title);
-}
-
-.educator header div span {
-  font-size: 1.6rem;
-  display: block;
-  margin-top: 0.4rem;
-}
-
-.educator p {
-  padding: 1.6rem;
-  font-size: 1.6rem;
-  line-height: 2.8rem;
-}
-
-.educator footer {
-  padding: 3.2rem 2rem;
-  background: var(--color-box-footer);
-  border-top: 1px solid var(--color-line-in-white);
-  margin-top: 3.2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.educator footer p strong {
-  color: var(--color-primary);
-  font-size: 1.6rem;
-  display: block;
-}
-
-.educator footer button {
-  width: 20rem;
-  height: 5.6rem;
-  background: var(--color-secundary);
-  color: var(--color-button-text);
-  border: 0;
-  border-radius: 0.8rem;
-  cursor: pointer;
-  font: 700 1.4rem Archivo;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  transition: 0.2s;
-}
-
-.educator footer button:hover {
-  background: var(--color-secundary-dark);
-}
-
 @media (min-width: 700px) {
   #educators-index {
-    max-width: 100%;
+    max-width: 100vw;
   }
 
   #educators-search {
@@ -149,28 +72,5 @@
     padding: 3.2rem 0;
     max-width: 740px;
     margin: 0 auto;
-  }
-
-  #educators-index header, #educators-index footer {
-    padding: 3.2rem;
-  }
-
-  #educators-index > p {
-    padding: 0 3.2rem;
-  }
-
-  .educator footer p strong {
-    display: initial;
-    margin-left: 1.6rem;
-  }
-
-  .educator footer button {
-    width: 24.5rem;
-    font-size: 1.6rem;
-    justify-content: center;
-  }
-
-  .educator footer button img {
-    margin-right: 1.6rem;
   }
 }
