--- a/frontend/web/src/pages/educators/new/styles.css
+++ b/frontend/web/src/pages/educators/new/styles.css
@@ -42,6 +42,10 @@
   margin-top: 1.4rem;
 }
 
+#educators-new main fieldset .select-block + .input-block {
+  margin-top: 1.4rem;
+}
+
 .input-block label {
   font-size: 1.4rem;
 }
@@ -81,10 +85,6 @@
   position: relative;
 }
 
-.text-area-block + .text-area-block {
-  margin-top: 1.4rem;
-}
-
 .text-area-block label {
   font-size: 1.4rem;
 }
@@ -95,7 +95,7 @@
   min-height: 11.2rem;
   margin-top: 0.8rem;
   border-radius: 0.8rem;
-  background-color: var(--color-input-background);
+  background: var(--color-input-background);
   border: 1px solid var(--color-line-in-white);
   outline: 0;
   resize: vertical;
@@ -107,7 +107,7 @@
   width: calc(100% - 3.2rem);
   height: 2px;
   content: '';
-  background-color: var(--color-primary-light);
+  background: var(--color-primary-light);
   position: absolute;
   left: 1.6rem;
   right: 1.6rem;
