Add select component in educatorsIndex on frontend web

--- a/frontend/web/src/pages/educators/index/styles.css
+++ b/frontend/web/src/pages/educators/index/styles.css
@@ -76,7 +76,8 @@
     bottom: -60px;
   }
 
-  #educators-search .educators-search + .educators-search {
+  #educators-search .educators-search + .educators-search,
+  #educators-search .select-block + .select-block {
     margin-top: 0;
   }
 
