--- a/frontend/web/src/components/educator/styles.css
+++ b/frontend/web/src/components/educator/styles.css
@@ -56,7 +56,7 @@
   display: block;
 }
 
-.educator footer button {
+.educator footer a {
   width: 20rem;
   height: 5.6rem;
   background: var(--color-secundary);
@@ -69,9 +69,10 @@
   align-items: center;
   justify-content: space-evenly;
   transition: 0.2s;
+  text-decoration: none;
 }
 
-.educator footer button:hover {
+.educator footer a:hover {
   background: var(--color-secundary-dark);
 }
 
